package com.vanskarner.singleadapter;

class LoadBindItem implements BindItem {
}
